--- a/Testimonial Page/style.css
+++ b/Testimonial Page/style.css
@@ -37,6 +37,7 @@ body {
     display: block;
     object-fit: cover;
     border-radius: 12px 0 0 12px;
+    transition: .5s ease-in;
 }
 
 .profile-image:hover {
@@ -248,7 +249,7 @@ blockquote h3 {
     }
 
     .quote-sign {
-        font-size: 1.9rem;
+        font-size: 1.8rem;
         height: 4px;
     }
 
@@ -257,9 +258,13 @@ blockquote h3 {
     }
 
     .quote-text {
-        font-size: .78rem;
+        font-size: .73rem;
         margin-bottom: 1.8rem;
         line-height: 1.5;
+    }
+
+    blockquote h3 {
+        margin-bottom: 3.5px;
     }
 
     .small-text {
@@ -267,7 +272,7 @@ blockquote h3 {
     }
 
     .logos-cont>span {
-        margin-right: 8px;
+        margin-right: 6px;
         padding: 3px 0;
     }
 
