--- a/Song Card/style.css
+++ b/Song Card/style.css
@@ -27,7 +27,7 @@ body {
     grid-template-rows: 128px;
     justify-items: center;
     align-items: center;
-    border-radius: 5px;
+    border-radius: 7px 5px 5px 7px;
     box-shadow: 0 12px 5px -9px hsl(231, 67%, 92%);
 }
 
@@ -47,6 +47,11 @@ body {
     transform: translate(20px, 21px);
     box-shadow: 0 19px 30px -14px hsla(0, 57%, 55%, 0.575);
     transition: all .8s ease;
+}
+
+.artist-image:hover {
+    filter: grayscale(5%);
+    opacity: .8;
 }
 
 .text-wrapper h3 {
@@ -93,7 +98,7 @@ body {
     width: 19px;
 }
 
-.btn-icon:hover {
+.btn-inner-wrapper:hover .btn-icon {
     animation-name: pulse;
     animation-duration: 1.1s;
     animation-fill-mode: both;
@@ -112,5 +117,44 @@ body {
 
     100% {
         transform: scale(1);
+    }
+}
+
+
+/* Media Query */
+
+@media (max-width: 447px) {
+    .container {
+        width: 95%;
+    }
+
+    .btn-outer-wrapper {
+        width: 2.5rem;
+        height: 2.5rem;
+        position: relative;
+        right: 8px;
+    }
+
+    .btn-inner-wrapper {
+        width: 1.75rem;
+        height: 1.75rem;
+    }
+
+    .btn-icon {
+        width: 15px;
+    }
+
+    @keyframes pulse {
+        0% {
+            transform: scale(1);
+        }
+
+        50% {
+            transform: scale(1.1);
+        }
+
+        100% {
+            transform: scale(1);
+        }
     }
 }
