align text properly on mobile devices

--- a/Notifications Modal/style.css
+++ b/Notifications Modal/style.css
@@ -180,6 +180,7 @@ input:checked+.radio-outline {
 
     .notification-modal__body p {
         font-size: .8rem;
+        margin-left: 1.5rem;
     }
 
     .radio-outline {
