--- a/Settings UI/style.css
+++ b/Settings UI/style.css
@@ -115,6 +115,7 @@ nav,
     padding: 5px;
     border-radius: 5px;
     transition: 300ms linear;
+    cursor: pointer;
 }
 
 .settings-items>ul>a:hover {
