--- a/Settings UI/style.css
+++ b/Settings UI/style.css
@@ -31,6 +31,10 @@ a {
     color: inherit;
 }
 
+img {
+    pointer-events: none;
+}
+
 .container {
     background: var(--ui-grey);
     width: 90%;
