--- a/Travel Guide/style.css
+++ b/Travel Guide/style.css
@@ -3,6 +3,7 @@
     src: url('./fonts/BlissPro-ExtraLight.woff') format('woff'), url('./fonts/BlissPro-ExtraLight.svg#BlissPro-ExtraLight') format('svg');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
     src: url('./fonts/BlissPro-Light.woff') format('woff'), url('./fonts/BlissPro-Light.svg#BlissPro-Light') format('svg');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 html {
@@ -70,14 +72,50 @@ input[type=checkbox] {
     display: flex;
 }
 
-.nav-links>span:nth-child(-n+4) {
-    margin-right: 3vw;
+.nav-links>span:nth-child(-n+5) {
+    margin-right: 1vw;
+    padding: 1rem 1.6rem;
+    transition: all 400ms ease-in-out;
+}
+
+.nav-links>span:nth-child(-n+5):hover {
+    background: hsla(180, 1%, 73%, 0.192);
+}
+
+.nav-links>span:nth-child(-n+5):after {
+    content: "";
+    height: 2px;
+    width: 0;
+    background: #fff;
+    display: block;
+    margin-top: 12px;
+    transition: 500ms ease-in-out;
+}
+
+.nav-links>span:nth-child(-n+5):hover:after {
+    width: 108%;
 }
 
 .nav-links>span:nth-child(-n+5)>a {
     font-size: 1.2rem;
     margin-bottom: 4px;
     display: inline-block;
+}
+
+.nav-links>span:nth-child(-n+5)>a:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+.nav-links>span:nth-child(-n+5)>div>a {
+    display: inline-block;
+}
+
+.nav-links>span:nth-child(-n+5)>div>a:hover {
+    transform: scale(1.05);
+    -webkit-text-stroke: 0 hsla(0, 0%, 100%, 0.623);
+    cursor: pointer;
+
 }
 
 .logo>p:nth-child(2) {
@@ -126,6 +164,7 @@ input[type=checkbox] {
     padding: .8rem 4px;
     outline: none;
     white-space: nowrap;
+    cursor: pointer;
 }
 
 .btn:focus,
@@ -158,7 +197,7 @@ input[type=checkbox] {
 }
 
 
-/* Media Query */
+/* Media Queries */
 
 @media (max-width: 1580px) {
     .hero--large_text {
@@ -175,7 +214,7 @@ input[type=checkbox] {
     }
 }
 
-@media (max-width: 860px) {
+@media (max-width: 1022px) {
     nav {
         padding: 0 5.5%;
     }
@@ -200,6 +239,7 @@ input[type=checkbox] {
     .hamburger-wrapper {
         cursor: pointer;
         z-index: 2;
+        outline: none;
     }
 
     .hamburger-wrapper span {
@@ -214,11 +254,14 @@ input[type=checkbox] {
     }
 
     /* hamburger hover effect */
-    .hamburger-wrapper:hover :nth-child(1) {
+    .hamburger-wrapper:hover :nth-child(1),
+    .hamburger-wrapper:focus :nth-child(1) {
         transform: translateY(-2px);
+        background: #b84642;
     }
 
-    .hamburger-wrapper:hover :nth-child(3) {
+    .hamburger-wrapper:hover :nth-child(3),
+    .hamburger-wrapper:focus :nth-child(3) {
         transform: translateY(2px);
     }
 
@@ -246,12 +289,21 @@ input[type=checkbox] {
         text-align: center;
         top: 0;
         opacity: 0;
-        transition: all 200ms linear;
+        transition: all 350ms ease-in-out, opacity 0ms;
     }
 
-    .nav-links>span:nth-child(-n+4) {
+    .nav-links>span:nth-child(-n+5) {
         margin-right: 0;
         margin-bottom: 2rem;
+        padding: 0;
+    }
+
+    .nav-links>span:nth-child(-n+5):hover {
+        background: hsla(2, 47%, 49%, 0.425);
+    }
+
+    .nav-links>span:nth-child(-n+5):hover:after {
+        width: 100%;
     }
 
     .hero--large_text {
@@ -263,6 +315,7 @@ input[type=checkbox] {
         width: 85%;
         max-width: 400px;
         -webkit-text-stroke: #fff;
+        background: hsla(0, 0%, 0%, 0.451);
     }
 
     .call-to-action {
@@ -273,5 +326,62 @@ input[type=checkbox] {
     .btn {
         width: 8rem;
         padding: .6rem 4px;
+    }
+}
+
+
+/* Smaller screens */
+
+@media (max-width: 420px) {
+    .logo .logo-text {
+        font-size: 2rem;
+        margin-top: 8px;
+    }
+
+    .logo>p:nth-child(2) {
+        font-size: .9rem;
+        margin-bottom: 3px;
+    }
+
+    .hamburger-wrapper span {
+        width: 25px;
+        height: 2px;
+    }
+
+    .hamburger-wrapper:hover :nth-child(1),
+    .hamburger-wrapper:focus :nth-child(1) {
+        transform: translateY(-1px);
+        background: #b84642;
+    }
+
+    .hamburger-wrapper:hover :nth-child(3),
+    .hamburger-wrapper:focus :nth-child(3) {
+        transform: translateY(1px);
+    }
+
+    input[type=checkbox]:checked~.hamburger-wrapper :nth-child(3) {
+        transform: translateY(-4.5px) translateX(0) rotate(-45deg);
+    }
+
+    .hero--large_text {
+        font-size: 2.3rem;
+        -webkit-text-stroke: .3px rgb(12, 9, 75);
+    }
+
+    .hero--small_text {
+        font-size: 1rem;
+        margin-bottom: 3.4rem;
+    }
+
+    .btn {
+        font-size: .9rem;
+        width: 7.2rem;
+        padding: .5rem 4px;
+    }
+
+    .call-to-action {
+        font-size: .7rem;
+        padding: .5rem 1rem .5rem 1rem;
+        right: 1rem;
     }
 }
