add margin-bottom to nav

--- a/Travel Guide/style.css
+++ b/Travel Guide/style.css
@@ -333,6 +333,10 @@ input[type=checkbox] {
 /* Smaller screens */
 
 @media (max-width: 420px) {
+    nav {
+        margin-bottom: 2.5rem;
+    }
+
     .logo .logo-text {
         font-size: 2rem;
         margin-top: 8px;
