--- a/Travel Guide/style.css
+++ b/Travel Guide/style.css
@@ -230,6 +230,7 @@ input[type=checkbox] {
         flex-direction: column;
         padding: 5.5rem 0 4rem;
         opacity: 1;
+        pointer-events: none;
     }
 
     input[type=checkbox] {
@@ -296,6 +297,11 @@ input[type=checkbox] {
         margin-right: 0;
         margin-bottom: 2rem;
         padding: 0;
+    }
+
+    .nav-links>span:nth-child(-n+5)>a,
+    .nav-links>span:nth-child(-n+5)>div>a {
+        pointer-events: all;
     }
 
     .nav-links>span:nth-child(-n+5):hover {
